--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>A PROPOS DE MOI</h1>
         <ul>
             <li>Adresse postale : 94000 CRETEIL</li>
-            <li>Adresse mail : valentine.lemonnier1@gmail.com <img src="../../Images/gmail.png"></li>
-            <li>Numéro de téléphone : 0612676013</li>
+            <li>Adresse mail : valentine@gmail.com <img src="../../Images/gmail.png"></li>
+            <li>Numéro de téléphone : 0606060606</li>
             <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img src="../../Images/linkedin.png"></li>
         </ul>
         <h1>MES EXPERIENCES</h1>
