--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <title>CV Valentine Lemonnier</title>
     </head>
     <body>
-        <p> <img src="../../Images/docaposte.jpeg">
+        <p> <img src="docaposte.jpeg">
         Bonjour et Bienvenue sur mon site, actuellement en master droit du numérique, je vous présente mon CV ! </p> 
         <h1>Valentine Lemonnier</h1>
         <p><a href="valentine.png" alt="Photo d'identité Valentine Lemonnier"/></a></p>
         <h1>A PROPOS DE MOI</h1>
         <ul>
             <li>Adresse postale : 94000 CRETEIL</li>
-            <li>Adresse mail : valentine@gmail.com <img src="../../Images/gmail.png"></li>
+            <li>Adresse mail : valentine@gmail.com <img src="gmail.png"></li>
             <li>Numéro de téléphone : 0606060606</li>
-            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img src="../../Images/linkedin.png"></li>
+            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img src="linkedin.png"></li>
         </ul>
         <h1>MES EXPERIENCES</h1>
         <ol>
