--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <body>
         <p> 
             <a href="docaposte.png"><img class="bannière" src="docaposte.jpeg" alt="Docaposte"/></a>
+              <p>  </p>
         Bonjour et Bienvenue sur mon site, actuellement en master droit du numérique, je vous présente mon CV ! </p> 
         <h1>Valentine Lemonnier</h1>
         <p><a href="valentine.png"><img class="portrait" src="valentine.png" alt="Photo identité Valentine Lemonnier"/></a></p>
         <h1>A PROPOS DE MOI</h1>
         <ul>
             <li>Adresse postale : 94000 CRETEIL</li>
-            <li>Adresse mail : valentine@gmail.com <img src="gmail.png"></li>
+            <li>Adresse mail : valentine@gmail.com <img clas="img src="gmail.png"></li>
             <li>Numéro de téléphone : 0606060606</li>
-            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="portrait" src="linkedin.png" alt="Linkedin"/></a>
+            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="img" src="linkedin.png" alt="Linkedin"/></a>
         </li>
         </ul>
         <h1>MES EXPERIENCES</h1>
