--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
+<link rel="stylesheet" href="CV1.css" />
     <head>
         <meta charset="UTF-8">
         <title>CV Valentine Lemonnier</title>
+        <link rel="stylesheet" href="cv.css">
     </head>
     <body>
-        <p> 
-            <a href="docaposte.png"><img class="bannière" src="docaposte.jpeg" alt="Docaposte"/></a>
-              <p>  </p>
+        <p> <img src="../../Images/docaposte.jpeg">
         Bonjour et Bienvenue sur mon site, actuellement en master droit du numérique, je vous présente mon CV ! </p> 
-        <h1>Valentine Lemonnier</h1>
-        <p><a href="valentine.png"><img class="portrait" src="valentine.png" alt="Photo identité Valentine Lemonnier"/></a></p>
-        <h1>A PROPOS DE MOI</h1>
-        <ul>
-            <li>Adresse postale : 94000 CRETEIL</li>
-            <li>Adresse mail : valentine@gmail.com <img clas="img src="gmail.png"></li>
-            <li>Numéro de téléphone : 0606060606</li>
-            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="img" src="linkedin.png" alt="Linkedin"/></a>
-        </li>
-        </ul>
-        <h1>MES EXPERIENCES</h1>
+         <div class="cv-container">
+            <div class="left-column">
+                <a href="valentine.png" class="portrait" src="valentine.png" alt="Photo d'identité Valentine Lemonnier"/></a>
+                <h1>Valentine Lemonnier</h1>
+                <div class="section">
+                    <h1>A PROPOS DE MOI</h1>
+                        <ul>
+                            <li>Adresse postale : 94000 CRETEIL</li>
+                             <li>Adresse mail : valentine@gmail.com <img src="../../Images/gmail.png"></li>
+                            <li>Numéro de téléphone : 0606060606</li>
+                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img src="../../Images/linkedin.png"></li>
+                        </ul>
+                </div>
+                <div class="right-column">       
+            <h1>MES EXPERIENCES</h1>
         <ol>
             <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
             <p>Septembre 2021 à Aujourd'hui</p>
