--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="cv.css">
     </head>
     <body>
-        <p> <img src="../../Images/docaposte.jpeg">
+        <p> <a href="docaposte.png"><img class="bannière" src="docaposte.jpeg" alt="Docaposte"/></a>
         Bonjour et Bienvenue sur mon site, actuellement en master droit du numérique, je vous présente mon CV ! </p> 
          <div class="cv-container">
             <div class="left-column">
@@ -17,9 +17,9 @@
                     <h1>A PROPOS DE MOI</h1>
                         <ul>
                             <li>Adresse postale : 94000 CRETEIL</li>
-                             <li>Adresse mail : valentine@gmail.com <img src="../../Images/gmail.png"></li>
+                             <li>Adresse mail : valentine@gmail.com <img class="illustration" src="gmail.png" alt="Gmail"/></li>
                             <li>Numéro de téléphone : 0606060606</li>
-                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img src="../../Images/linkedin.png"></li>
+                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="linkedin.png" alt="Linkedin"/></a>
                         </ul>
                 </div>
                 <div class="right-column">       
@@ -84,3 +84,4 @@
         </ol>    
     </body>
 </html>
+ 
