--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <link rel="stylesheet" href="CV1.css" />
     <head>
@@ -84,4 +85,3 @@
         </ol>    
     </body>
 </html>
- 
