--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="fr">
 <link rel="stylesheet" href="CV1.css" />
     <head>
@@ -13,7 +12,7 @@
          <div class="cv-container">
             <div class="left-column">
                 <a href="valentine.png" class="portrait" src="valentine.png" alt="Photo d'identité Valentine Lemonnier"/></a>
-                <h1>Valentine Lemonnier</h1>
+                <h1>Valentine Lemonnier<br><span class="text-purple text-uppercase"></span></h1>
                 <div class="section">
                     <h1>A PROPOS DE MOI</h1>
                         <ul>
@@ -23,65 +22,71 @@
                             <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="linkedin.png" alt="Linkedin"/></a>
                         </ul>
                 </div>
-                <div class="right-column">       
-            <h1>MES EXPERIENCES</h1>
-        <ol>
-            <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
-            <p>Septembre 2021 à Aujourd'hui</p>
-                <ul>
-                    <li>Préparation et modification de contrats</li>
-                    <li>Mise en conformité des clauses RGPD</li>
-                    <li>Préparation de formation et de conseils aux entreprises</li>
-                </ul>
-            <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-            <p>Juillet/Août 2021 et Juin 2020 à Janvier 2021</p>
-                <ul>
-                    <li>Réception et émission d'appels</li>
-                    <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
-                    <li>Tâches administratives et saisies de données informatiques</li>
-                </ul>
-        </ol>
-        <ol>
-            <p>  </p>
-            <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-            <p>Mai à Août 2019</p>
-                <ul>
-                    <li>Réception et émission d'appels</li>
-                    <li>Accompagner et orienter les clients en matière de formation à distance</li>
-                    <li>Tâches administratives et saisies de données informatiques</li>
-                </ul>
-        </ol>
-        <ol>
-            <p>  </p>
-            <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
-            <p>Juillet 2018</p>
-                <ul>
-                    <li>Tri et classement de factures</li>
-                    <li>Gestion du courrier</li>
-                </ul>
-        </ol>
-        <h1>MES STAGES</h1>
-        <ol>
-            <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
-            <p>Mai et Juin 2021</p>
-                <ul>
-                    <li>Recherche et rédaction de réponses sur les questions juridiques pour les adhérents</li>
-                    <li>Rédactioins de clauses RGPD et de protections des données personnelles</li>
-                    <li>Participation à l'organisation d'un forum de l'emploi virtuel</li>
-                </ul>
-            <h3>Stage découverte dans le cabinet d'avocat <a href="https://www.acty-avocats.fr">ACTY</a></h3>
-            <p>Février 2018</p>
-                <ul>
-                    <li>Découverte du métier d'avocats</li>
-                    <li>Classement de preuves</li>
-                    <li>Présence à une audience après analyse du dossier</li>
-                </ul>    
-        </ol>
-        <h1>MES DIPLÔMES</h1>
-        <ol>
-            <li>Licence de droit, mention droit privé à l'Universoté de Poitiers : <em>juin 2021</em></li>
-            <li>Baccalauréat ES, section européenne, mention bien : <em>juin 2018</em></li>
-            <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
-        </ol>    
+                <div class="right-column"> 
+                <div class="section">      
+                    <h1>MES EXPERIENCES <br><span class="text-purple"></span></h1>
+                    <ol>
+                        <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
+                             <p>Septembre 2021 à Aujourd'hui</p>
+                            <ul>
+                                <li>Préparation et modification de contrats</li>
+                                <li>Mise en conformité des clauses RGPD</li>
+                                <li>Préparation de formation et de conseils aux entreprises</li>
+                            </ul>
+                         <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
+                            <p>Juillet/Août 2021 et Juin 2020 à Janvier 2021</p>
+                            <ul>
+                                <li>Réception et émission d'appels</li>
+                                <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
+                                <li>Tâches administratives et saisies de données informatiques</li>
+                            </ul>
+                    </ol>
+                    <ol>
+                    <p>  </p>
+                        <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
+                            <p>Mai à Août 2019</p>
+                            <ul>
+                                <li>Réception et émission d'appels</li>
+                                <li>Accompagner et orienter les clients en matière de formation à distance</li>
+                                <li>Tâches administratives et saisies de données informatiques</li>
+                            </ul>
+                    </ol>
+                    <ol>
+                    <p>  </p>
+                        <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
+                            <p>Juillet 2018</p>
+                            <ul>
+                                <li>Tri et classement de factures</li>
+                                <li>Gestion du courrier</li>
+                            </ul>
+                    </ol>
+            </div>        
+            <div class="section">
+                <h1>MES STAGES</h1>
+                    <ol>
+                        <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
+                            <p>Mai et Juin 2021</p>
+                            <ul>
+                                <li>Recherche et rédaction de réponses sur les questions juridiques pour les adhérents</li>
+                                <li>Rédactioins de clauses RGPD et de protections des données personnelles</li>
+                                <li>Participation à l'organisation d'un forum de l'emploi virtuel</li>
+                            </ul>
+                        <h3>Stage découverte dans le cabinet d'avocat <a href="https://www.acty-avocats.fr">ACTY</a></h3>
+                            <p>Février 2018</p>
+                            <ul>
+                                <li>Découverte du métier d'avocats</li>
+                                <li>Classement de preuves</li>
+                                <li>Présence à une audience après analyse du dossier</li>
+                            </ul>    
+                    </ol>
+            </div>
+            <div class="section">
+                <h1>MES DIPLÔMES</h1>
+                    <ol>
+                        <li>Licence de droit, mention droit privé à l'Universoté de Poitiers : <em>juin 2021</em></li>
+                        <li>Baccalauréat ES, section européenne, mention bien : <em>juin 2018</em></li>
+                        <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
+                    </ol> 
+            </div>   
     </body>
 </html>
