--- a/index.html
+++ b/index.html
@@ -3,67 +3,93 @@
 <link rel="stylesheet" href="CV1.css" />
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport"
+                content="width=device-width, initial-scale=1, user-scalable=no">
         <title>CV Valentine Lemonnier</title>
         <link rel="stylesheet" href="cv.css">
     </head>
     <body>
-        <p> <a href="docaposte.png"><img class="bannière" src="docaposte.jpeg" alt="Docaposte"/></a>
-        Bonjour et Bienvenue sur mon site, actuellement en master droit du numérique, je vous présente mon CV ! </p> 
-         <div class="cv-container">
+        <header>
+            <div id="header">
+        <h1> MON CV </h1>
+            </div>
+        </header>
+        <div class="cv-container">
             <div class="left-column">
-                <a href="valentine.png" class="portrait" src="valentine.png" alt="Photo d'identité Valentine Lemonnier"/></a>
-                <h1>Valentine Lemonnier<br><span class="text-purple text-uppercase"></span></h1>
+                <img class="portrait" src="valentine.png" />
                 <div class="section">
-                    <h1>A PROPOS DE MOI</h1>
-                        <ul>
+                    <p>
+                    </p>
+                </div>
+                <div class="section">
+                  <h1>A PROPOS DE MOI</h1>
+                    <p>
+                        <ul class="information">
                             <li>Adresse postale : 94000 CRETEIL</li>
                              <li>Adresse mail : valentine@gmail.com <img class="illustration" src="gmail.png" alt="Gmail"/></li>
                             <li>Numéro de téléphone : 0606060606</li>
                             <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="linkedin.png" alt="Linkedin"/></a>
                         </ul>
+                    </p>
+                    <p>
+                    Langues
+                        <ul class="skills">
+                            <li>Français : Niveau C2</li>
+                            <li>Anglais : Niveau C1</li>
+                            <li>Espagnol : Niveau A2</li>
+                            <li>Italien : Niveau A2</li>
+                        </ul>
+                    </p>
                 </div>
-                <div class="right-column"> 
-                <div class="section">      
-                    <h1>MES EXPERIENCES <br><span class="text-purple"></span></h1>
-                    <ol>
-                        <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
-                             <p>Septembre 2021 à Aujourd'hui</p>
-                            <ul>
-                                <li>Préparation et modification de contrats</li>
-                                <li>Mise en conformité des clauses RGPD</li>
-                                <li>Préparation de formation et de conseils aux entreprises</li>
-                            </ul>
-                         <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-                            <p>Juillet/Août 2021 et Juin 2020 à Janvier 2021</p>
-                            <ul>
-                                <li>Réception et émission d'appels</li>
-                                <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
-                                <li>Tâches administratives et saisies de données informatiques</li>
-                            </ul>
-                    </ol>
-                    <ol>
-                    <p>  </p>
-                        <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-                            <p>Mai à Août 2019</p>
-                            <ul>
-                                <li>Réception et émission d'appels</li>
-                                <li>Accompagner et orienter les clients en matière de formation à distance</li>
-                                <li>Tâches administratives et saisies de données informatiques</li>
-                            </ul>
-                    </ol>
-                    <ol>
-                    <p>  </p>
-                        <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
-                            <p>Juillet 2018</p>
-                            <ul>
-                                <li>Tri et classement de factures</li>
-                                <li>Gestion du courrier</li>
-                            </ul>
-                    </ol>
-            </div>        
-            <div class="section">
-                <h1>MES STAGES</h1>
-                    <ol>
+            </li>
+        </ul>
+    </p>
+</div>
+                <div class="right-column">
+                    <div class="header">
+                        <h1> Valentine LEMONNIER</h1>
+                    </div>    
+                            <div class="section">
+                                <h2>MES EXPERIENCES</h2>
+                            <p>
+                                    <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
+                                    <p>Septembre 2021 à Aujourd'hui</p>
+                                        <ul>
+                                            <li>Préparation et modification de contrats</li>
+                                            <li>Mise en conformité des clauses RGPD</li>
+                                            <li>Préparation de formation et de conseils aux entreprises</li>
+                                        </ul>
+                            </p>
+                            <p>
+                                    <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
+                                     <p>Juillet/Août 2021 et Juin 2020 à Janvier 2021</p>
+                                        <ul>
+                                            <li>Réception et émission d'appels</li>
+                                            <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
+                                            <li>Tâches administratives et saisies de données informatiques</li>
+                                        </ul>
+                            </p>
+                            <p>
+                                <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
+                                    <p>Mai à Août 2019</p>
+                                        <ul>
+                                            <li>Réception et émission d'appels</li>
+                                            <li>Accompagner et orienter les clients en matière de formation à distance</li>
+                                            <li>Tâches administratives et saisies de données informatiques</li>
+                                        </ul>
+                            </p>
+                            <p>           
+                                <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
+                                    <p>Juillet 2018</p>
+                                    <ul>
+                                            <li>Tri et classement de factures</li>
+                                            <li>Gestion du courrier</li>
+                                    </ul>
+                            </p>
+                        </div>
+                        <div>
+                            <h2>MES STAGES</h2>
+                    <p>
                         <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
                             <p>Mai et Juin 2021</p>
                             <ul>
@@ -78,15 +104,20 @@
                                 <li>Classement de preuves</li>
                                 <li>Présence à une audience après analyse du dossier</li>
                             </ul>    
-                    </ol>
-            </div>
-            <div class="section">
-                <h1>MES DIPLÔMES</h1>
-                    <ol>
+                    </p>
+                        </div>
+                        <div>
+                            <h2>MES DIPLÔMES</h2>
+                <p>
                         <li>Licence de droit, mention droit privé à l'Universoté de Poitiers : <em>juin 2021</em></li>
                         <li>Baccalauréat ES, section européenne, mention bien : <em>juin 2018</em></li>
                         <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
-                    </ol> 
-            </div>   
+                </p>
+                        </div>
+                        </div> 
+                    <div id="container">
+                        <div id="main"></div>
+                        <div id="footer"></div>
+                    </div>  
     </body>
 </html>
