--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <div class="cv-container">
             <div class="left-column">
-                <img class="portrait" src="valentine.png" />
+                <img class="portrait" src="identité.jpeg" />
                 <div class="section">
                     <p>
                     </p>
