--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
         <link rel="stylesheet" href="cv.css">
     </head>
     <body>
-        <header>
-            <div id="header">
         <h1> MON CV </h1>
-            </div>
-        </header>
         <div class="cv-container">
+        <img id="banhaut" src="Images/banhaut.jpeg" alt="BanHaut" />
+        <img id="banbas" src="Images/banbas.jpeg" alt="BanBas" />
             <div class="left-column">
-                <img class="portrait" src="identité.jpeg" />
+                <img class="portrait" src="Images/identité.jpeg" height="200px" width="300px" border-radius="15%" />
                 <div class="section">
                     <p>
                     </p>
@@ -26,14 +24,14 @@
                     <p>
                         <ul class="information">
                             <li>Adresse postale : 94000 CRETEIL</li>
-                             <li>Adresse mail : valentine@gmail.com <img class="illustration" src="gmail.png" alt="Gmail"/></li>
+                             <li>Adresse mail : valentine@gmail.com <img class="illustration" src="Images/gmail.png" alt="Gmail" height="20" width="20" /></li>
                             <li>Numéro de téléphone : 0606060606</li>
-                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="linkedin.png" alt="Linkedin"/></a>
+                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="Images/linkedin.png" alt="Linkedin" height="20" width="20" /></a>
                         </ul>
                     </p>
                     <p>
-                    Langues
                         <ul class="skills">
+                            LANGUES
                             <li>Français : Niveau C2</li>
                             <li>Anglais : Niveau C1</li>
                             <li>Espagnol : Niveau A2</li>
@@ -48,9 +46,11 @@
                 <div class="right-column">
                     <div class="header">
                         <h1> Valentine LEMONNIER</h1>
-                    </div>    
+                        <h4><em>Étudiante en droit du numérique</em></h4>
+                    </div>   
                             <div class="section">
                                 <h2>MES EXPERIENCES</h2>
+                                <ul>
                             <p>
                                     <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
                                     <p>Septembre 2021 à Aujourd'hui</p>
@@ -86,9 +86,11 @@
                                             <li>Gestion du courrier</li>
                                     </ul>
                             </p>
+                        </ul>
                         </div>
                         <div>
                             <h2>MES STAGES</h2>
+                            <ul>
                     <p>
                         <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
                             <p>Mai et Juin 2021</p>
@@ -105,19 +107,27 @@
                                 <li>Présence à une audience après analyse du dossier</li>
                             </ul>    
                     </p>
+                </ul>
                         </div>
                         <div>
                             <h2>MES DIPLÔMES</h2>
+                            <ul>
                 <p>
+                    <ul>
                         <li>Licence de droit, mention droit privé à l'Universoté de Poitiers : <em>juin 2021</em></li>
                         <li>Baccalauréat ES, section européenne, mention bien : <em>juin 2018</em></li>
                         <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
+                    </ul>
                 </p>
+            </ul>
                         </div>
                         </div> 
                     <div id="container">
                         <div id="main"></div>
                         <div id="footer"></div>
-                    </div>  
+                    </div>
+                </div>
+                </div>     
+        </div>
     </body>
 </html>
