--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                             <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="Images/linkedin.png" alt="Linkedin" height="20" width="20" /></a>
                         </ul>
                     </p>
+                    <br>
+                    <br>
+                    <br>
                     <p>
                         <ul class="skills">
                             LANGUES
@@ -50,6 +53,7 @@
                     </div>   
                             <div class="section">
                                 <h2>MES EXPERIENCES</h2>
+                                <hr class="hr">
                                 <ul>
                             <p>
                                     <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
@@ -90,6 +94,7 @@
                         </div>
                         <div>
                             <h2>MES STAGES</h2>
+                            <hr class="hr">
                             <ul>
                     <p>
                         <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
@@ -111,6 +116,7 @@
                         </div>
                         <div>
                             <h2>MES DIPLÔMES</h2>
+                            <hr class="hr">
                             <ul>
                 <p>
                     <ul>
