--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <ul>
                             <p>
                                     <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
-                                    <p>Septembre 2021 à Aujourd'hui</p>
+                                    <p><em>Septembre 2021 à Aujourd'hui</em></p>
                                         <ul>
                                             <li>Préparation et modification de contrats</li>
                                             <li>Mise en conformité des clauses RGPD</li>
@@ -66,7 +66,7 @@
                             </p>
                             <p>
                                     <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-                                     <p>Juillet/Août 2021 et Juin 2020 à Janvier 2021</p>
+                                <p><em>Juillet/Août 2021 et Juin 2020 à Janvier 2021</em></p>
                                         <ul>
                                             <li>Réception et émission d'appels</li>
                                             <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
@@ -75,7 +75,7 @@
                             </p>
                             <p>
                                 <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-                                    <p>Mai à Août 2019</p>
+                    <p><em>Mai à Août 2019</em></p>
                                         <ul>
                                             <li>Réception et émission d'appels</li>
                                             <li>Accompagner et orienter les clients en matière de formation à distance</li>
@@ -84,7 +84,7 @@
                             </p>
                             <p>           
                                 <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
-                                    <p>Juillet 2018</p>
+<p><em>Juillet 2018</em></p>
                                     <ul>
                                             <li>Tri et classement de factures</li>
                                             <li>Gestion du courrier</li>
@@ -98,14 +98,14 @@
                             <ul>
                     <p>
                         <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
-                            <p>Mai et Juin 2021</p>
+                                <p><em>Mai et Juin 2021</em></p>
                             <ul>
                                 <li>Recherche et rédaction de réponses sur les questions juridiques pour les adhérents</li>
                                 <li>Rédactioins de clauses RGPD et de protections des données personnelles</li>
                                 <li>Participation à l'organisation d'un forum de l'emploi virtuel</li>
                             </ul>
                         <h3>Stage découverte dans le cabinet d'avocat <a href="https://www.acty-avocats.fr">ACTY</a></h3>
-                            <p>Février 2018</p>
+                                <p><em>Février 2018</em></p>
                             <ul>
                                 <li>Découverte du métier d'avocats</li>
                                 <li>Classement de preuves</li>
