--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
-<link rel="stylesheet" href="CV1.css" />
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
                 content="width=device-width, initial-scale=1, user-scalable=no">
         <title>CV Valentine Lemonnier</title>
-        <link rel="stylesheet" href="cv.css">
+        <link rel="stylesheet" href="CV1.css" />
     </head>
     <body>
         <h1> MON CV </h1>
@@ -84,7 +83,7 @@
                             </p>
                             <p>           
                                 <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
-<p><em>Juillet 2018</em></p>
+                                <p><em>Juillet 2018</em></p>
                                     <ul>
                                             <li>Tri et classement de factures</li>
                                             <li>Gestion du courrier</li>
@@ -125,6 +124,7 @@
                         <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
                     </ul>
                 </p>
+                <a href="#banhaut">Retour en haut de la page</a>
             </ul>
                         </div>
                         </div> 
