--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                     </ul>
                 </p>
                 <a href="#banhaut">Retour en haut de la page</a>
+                <a href="ex1.html">Voir l'exercice 1</a>
             </ul>
                         </div>
                         </div> 
