--- a/controle-PW-Lemonnier-2022/ex1.html
+++ b/controle-PW-Lemonnier-2022/ex1.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html
->
-<html lang="fr"
->
+<!DOCTYPE html>
+<html lang="fr">
     <head>
   		<meta charset="UTF-8"
   		>
@@ -10,19 +8,22 @@
         </title>
     </head>
     <body>
+        <div class="box1">
     	<h1>TITRE</h1> 
-    		<div class="shadowbox"
-    		>
+    		<div class="greybox">
     			<p> Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris (le même gris sera utilisé pour tous les fonds dentête), avec un liseret inset alors que les paragraphes sont ferrés à gauche ingorez leffet de lettrine.
     			</p>
+        <div class="box2">        
         <h1>titre</h1>
-            <div class="box1"
-            >
+            <div class="darkgreybox">
                 <p> Dans cette division, les entêtes de niveau 1 utilisent la moitié de la largeur, sont centrées sur fond gris et sont soulignés. Les paragraphes sont justifiés. </p>
             <h1>titre</h1>
                 <p> Dans cette divison, les entêtes de niveau 1 utilisent un quart de la largeur, sont ferrés à droite et sont en italique. Les paragrapges occupent les deux tiers de la largeur, sont justifiés, cadrés à gauche et à droite. Ils possèdent une marge basse de 2 fois la hauteur de la fonte. </p>
+            <div class="box1">
             <h1>TITRE</h1>
+                <div class="greybox">
                 <p> Dans cette division, les entêtes de niveau 1 sont entrées sur fond gris, avec un liseret outset, alors que les paragraphes sont ferrés à droite.</p>
+            <div class="box3">
             <h1>titre</h1>
                 <p>Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris, en italique. Les paragrapges utilisent la motié de la largeur et sont centrés.</p>
     </body>
