--- a/controle-PW-Lemonnier-2022/ex1.html
+++ b/controle-PW-Lemonnier-2022/ex1.html
@@ -5,6 +5,7 @@
   		>
   		<meta>
         <title>Ex1 Valentine Lemonnier 
+        <link rel="stylesheet" href="ex1.css">
         </title>
     </head>
     <body>
