--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
                         <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
                     </ul>
                 </p>
-                <a href="#banhaut">Retour en haut de la page</a>
-                <a href="ex1.html" href="ex1.css">Voir l'exercice 1</a>
+                <a href="#banhaut">Retour en haut de la page</a><br>
+                <a href="ex.html" href="ex1.css">Voir l'exercice 1</a><br>
+                <a href="ex2.tml" href="ex2.css"> Voir l'exercice 2</a>
             </ul>
                         </div>
                         </div> 
