--- a/controle-PW-Lemonnier-2022/ex.html
+++ b/controle-PW-Lemonnier-2022/ex.html
@@ -12,6 +12,7 @@
         <div class="box1">
     	<h1>TITRE</h1> 
     		<div class="greybox">
+    			<p> Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris (le même gris sera utilisé pour tous les fonds dentête), avec un liseret inset alors que les paragraphes sont ferrés à gauche ingorez leffet de lettrine.
     			</p>
         <div class="box2">        
         <h1>titre</h1>
