--- a/controle-PW-Lemonnier-2022/ex.html
+++ b/controle-PW-Lemonnier-2022/ex.html
@@ -5,8 +5,8 @@
   		>
   		<meta>
         <title>Ex1 Valentine Lemonnier 
-        <link rel="stylesheet" href="ex1.css">
         </title>
+        <link rel="stylesheet" href="ex1.css"/>
     </head>
     <body>
         <div class="box1">
