--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -1,9 +1,141 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-  		<meta charset="UTF-8"
-  		>
-  		<meta>
-        <title>Ex1 Valentine Lemonnier 
-        <link rel="stylesheet" href="ex1.css">
-        </title>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+                content="width=device-width, initial-scale=1, user-scalable=no">
+        <title>Rapport de conférence</title>
+        <link rel="stylesheet" href="CV1.css" />
+    </head>
+    <body>
+        <h1> Rapport de conférence : l'intelligence artificielle </h1>
+        <div class="rapport-container">
+        <img id="banhaut" src="ImagesPW/IA.jpeg" alt="BanHaut" />
+        <img id="banbas" src="Images/banbas.jpeg" alt="BanBas" />
+            <div class="left-column">
+                <img class="portrait" src="Images/identité.jpeg" height="200px" width="300px" border-radius="15%" />
+                <div class="section">
+                    <p>
+                    </p>
+                </div>
+                <div class="section">
+                  <h1>A PROPOS DE MOI</h1>
+                    <p>
+                        <ul class="information">
+                            <li>Adresse postale : 94000 CRETEIL</li>
+                             <li>Adresse mail : valentine@gmail.com <img class="illustration" src="Images/gmail.png" alt="Gmail" height="20" width="20" /></li>
+                            <li>Numéro de téléphone : 0606060606</li>
+                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="Images/linkedin.png" alt="Linkedin" height="20" width="20" /></a>
+                        </ul>
+                    </p>
+                    <br>
+                    <br>
+                    <br>
+                    <p>
+                        <ul class="skills">
+                            LANGUES
+                            <li>Français : Niveau C2</li>
+                            <li>Anglais : Niveau C1</li>
+                            <li>Espagnol : Niveau A2</li>
+                            <li>Italien : Niveau A2</li>
+                        </ul>
+                    </p>
+                </div>
+            </li>
+        </ul>
+    </p>
+</div>
+                <div class="right-column">
+                    <div class="header">
+                        <h1> Valentine LEMONNIER</h1>
+                        <h4><em>Étudiante en droit du numérique</em></h4>
+                    </div>   
+                            <div class="section">
+                                <h2>MES EXPERIENCES</h2>
+                                <hr class="hr">
+                                <ul>
+                            <p>
+                                    <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
+                                    <p><em>Septembre 2021 à Aujourd'hui</em></p>
+                                        <ul>
+                                            <li>Préparation et modification de contrats</li>
+                                            <li>Mise en conformité des clauses RGPD</li>
+                                            <li>Préparation de formation et de conseils aux entreprises</li>
+                                        </ul>
+                            </p>
+                            <p>
+                                    <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
+                                <p><em>Juillet/Août 2021 et Juin 2020 à Janvier 2021</em></p>
+                                        <ul>
+                                            <li>Réception et émission d'appels</li>
+                                            <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
+                                            <li>Tâches administratives et saisies de données informatiques</li>
+                                        </ul>
+                            </p>
+                            <p>
+                                <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
+                    <p><em>Mai à Août 2019</em></p>
+                                        <ul>
+                                            <li>Réception et émission d'appels</li>
+                                            <li>Accompagner et orienter les clients en matière de formation à distance</li>
+                                            <li>Tâches administratives et saisies de données informatiques</li>
+                                        </ul>
+                            </p>
+                            <p>           
+                                <h3>Employée administrative polyvalente chez <a href="https://www.cofaq.fr">COFAQ</a></h3>
+                                <p><em>Juillet 2018</em></p>
+                                    <ul>
+                                            <li>Tri et classement de factures</li>
+                                            <li>Gestion du courrier</li>
+                                    </ul>
+                            </p>
+                        </ul>
+                        </div>
+                        <div>
+                            <h2>MES STAGES</h2>
+                            <hr class="hr">
+                            <ul>
+                    <p>
+                        <h3>Stagiaire au sein du service juridique de l'<a href="https://uimm.lafabriquedelavenir.fr/industrie/">UIMM de la Vienne</a></h3>
+                                <p><em>Mai et Juin 2021</em></p>
+                            <ul>
+                                <li>Recherche et rédaction de réponses sur les questions juridiques pour les adhérents</li>
+                                <li>Rédactioins de clauses RGPD et de protections des données personnelles</li>
+                                <li>Participation à l'organisation d'un forum de l'emploi virtuel</li>
+                            </ul>
+                        <h3>Stage découverte dans le cabinet d'avocat <a href="https://www.acty-avocats.fr">ACTY</a></h3>
+                                <p><em>Février 2018</em></p>
+                            <ul>
+                                <li>Découverte du métier d'avocats</li>
+                                <li>Classement de preuves</li>
+                                <li>Présence à une audience après analyse du dossier</li>
+                            </ul>    
+                    </p>
+                </ul>
+                        </div>
+                        <div>
+                            <h2>MES DIPLÔMES</h2>
+                            <hr class="hr">
+                            <ul>
+                <p>
+                    <ul>
+                        <li>Licence de droit, mention droit privé à l'Universoté de Poitiers : <em>juin 2021</em></li>
+                        <li>Baccalauréat ES, section européenne, mention bien : <em>juin 2018</em></li>
+                        <li>Brevet des collèges, mention très bien : <em>juin 2015</em></li>
+                    </ul>
+                </p>
+                <a href="#banhaut">Retour en haut de la page</a><br>
+                <a href="ex.html" href="ex1.css">Voir l'exercice 1</a><br>
+                <a href="ex2.tml" href="ex2.css"> Voir l'exercice 2</a>
+            </ul>
+                        </div>
+                        </div> 
+                    <div id="container">
+                        <div id="main"></div>
+                        <div id="footer"></div>
+                    </div>
+                </div>
+                </div>     
+        </div>
+    </body>
+</html>
