--- a/controle-PW-Lemonnier-2022/ex.html
+++ b/controle-PW-Lemonnier-2022/ex.html
@@ -10,23 +10,36 @@
     </head>
     <body>
         <div class="gauche">
-    	<h1>TITRE</h1> 
-    		<div class="greybox">
+        <div class="titre1"><h1>TITRE</h1> 
+    		<div class="texte1">
     			<p> Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris (le même gris sera utilisé pour tous les fonds dentête), avec un liseret inset alors que les paragraphes sont ferrés à gauche ingorez leffet de lettrine.
     			</p>
-        <div class="centre">        
-            <div class="darkgreybox">
-                <h1>titre</h1>
+             </div> 
+             </div> 
+             </div> 
+        <div class="centre">
+        <div class="textehaut">        
+            <div class="titre2"><h1>titre</h1>
                 <p> Dans cette division, les entêtes de niveau 1 utilisent la moitié de la largeur, sont centrées sur fond gris et sont soulignés. Les paragraphes sont justifiés. </p>
-            <div class="darkgreybox">
-            <h1>titre</h1>
+            </div>
+            </div>
+        <div class="textebas">
+            <div class="titre3"><h1>titre</h1>
                 <p> Dans cette divison, les entêtes de niveau 1 utilisent un quart de la largeur, sont ferrés à droite et sont en italique. Les paragraphes occupent les deux tiers de la largeur, sont justifiés, cadrés à gauche et à droite. Ils possèdent une marge basse de 2 fois la hauteur de la fonte. </p>
+            </div>
+        </div>
+        </div>
             <div class="droite">
-            <h1>TITRE</h1>
-                <div class="greybox">
+            <div class="titre4"><h1>TITRE</h1>
+                <div class="texte2">
                 <p> Dans cette division, les entêtes de niveau 1 sont entrées sur fond gris, avec un liseret outset, alors que les paragraphes sont ferrés à droite.</p>
+            </div>
+        </div>
+        </div>
             <div class="bas">
-            <h1>titre</h1>
+            <div class="titre5"><h1>titre</h1>
                 <p>Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris, en italique. Les paragrapges utilisent la motié de la largeur et sont centrés.</p>
+            </div>
+        </div>
     </body>
     </html>
