--- a/controle-PW-Lemonnier-2022/ex.html
+++ b/controle-PW-Lemonnier-2022/ex.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="ex1.css"/>
     </head>
     <body>
+        <div class="contenubox">
         <div class="gauche">
         <div class="titre1"><h1>TITRE</h1> 
     		<div class="texte1">
@@ -38,8 +39,11 @@
         </div>
             <div class="bas">
             <div class="titre5"><h1>titre</h1>
+                <div class="texte3">
                 <p>Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris, en italique. Les paragrapges utilisent la motié de la largeur et sont centrés.</p>
             </div>
         </div>
+        </div>
+    </div>
     </body>
     </html>
