--- a/controle-PW-Lemonnier-2022/ex.html
+++ b/controle-PW-Lemonnier-2022/ex.html
@@ -11,11 +11,10 @@
     <body>
         <div class="contenubox">
         <div class="gauche">
-        <div class="titre1"><h1>TITRE</h1> 
+        <div class="titre1"><h1>TITRE</h1></div>
     		<div class="texte1">
     			<p> Dans cette division, les entêtes de niveau 1 sont centrées sur fond gris (le même gris sera utilisé pour tous les fonds dentête), avec un liseret inset alors que les paragraphes sont ferrés à gauche ingorez leffet de lettrine.
     			</p>
-             </div> 
              </div> 
              </div> 
         <div class="centre">
