--- a/controle-PW-Lemonnier-2022/ex.html
+++ b/controle-PW-Lemonnier-2022/ex.html
@@ -24,7 +24,9 @@
             </div>
         <div class="textebas">
             <div class="titre3"><h1>titre</h1></div>
+            <div class="box">
                 <p> Dans cette divison, les entêtes de niveau 1 utilisent un quart de la largeur, sont ferrés à droite et sont en italique. Les paragraphes occupent les deux tiers de la largeur, sont justifiés, cadrés à gauche et à droite. Ils possèdent une marge basse de 2 fois la hauteur de la fonte. </p>
+            </div>
             </div>
         </div>
             <div class="droite">
