--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                     </ul>
                 </p>
                 <a href="#banhaut">Retour en haut de la page</a>
-                <a href="ex.html" href="ex1.css">Voir l'exercice 1</a>
+                <a href="ex.html">Voir l'exercice 1"html"</a>
+                <a href="ex1.css">Voir l'exercice 1"css"</a>
                 <a href="ex2.html" href="ex2.css"> Voir l'exercice 2</a>
             </ul>
                         </div>
