--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </ul>
                 </p>
                 <a href="#banhaut">Retour en haut de la page</a>
-                <a href="controle-PW-Lemonnier-2022/ex.html">Voir l'exercice 1"html"</a>
+                <a href="./controle-PW-Lemonnier-2022/ex.html">Voir l'exercice 1"html"</a>
                 <a href="ex1.css">Voir l'exercice 1"css"</a>
                 <a href="ex2.html" href="ex2.css"> Voir l'exercice 2</a>
             </ul>
