--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -5,13 +5,12 @@
         <meta name="viewport"
                 content="width=device-width, initial-scale=1, user-scalable=no">
         <title>Rapport de conférence</title>
-        <link rel="stylesheet" href="CV1.css" />
+        <link rel="stylesheet" href="ex2.css" />
     </head>
     <body>
         <h1> Rapport de conférence : l'intelligence artificielle </h1>
         <div class="rapport-container">
         <img id="banhaut" src="ImagesPW/IA.jpeg" alt="BanHaut" />
-        <img id="banbas" src="Images/banbas.jpeg" alt="BanBas" />
             <div class="left-column">
                 <img class="portrait" src="Images/identité.jpeg" height="200px" width="300px" border-radius="15%" />
                 <div class="section">
