--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                 </p>
                 <a href="#banhaut">Retour en haut de la page</a>
                 <a href="./controle-PW-Lemonnier-2022/ex.html">Voir l'exercice 1"html"</a>
-                <a href="ex1.css">Voir l'exercice 1"css"</a>
-                <a href="ex2.html" href="ex2.css"> Voir l'exercice 2</a>
+                <a href="./controle-PW-Lemonnier-2022/ex1.css">Voir l'exercice 1"css"</a>
+                <a href="./controle-PW-Lemonnier-2022/ex2.html"> Voir l'exercice 2"html"</a>
+                <a href="./controle-PW-Lemonnier-2022/ex2.css">Voir l'exercice 2"css"</a>
             </ul>
                         </div>
                         </div> 
