--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -18,23 +18,21 @@
                     </p>
                 </div>
                 <div class="section">
-                  <h1>A PROPOS DE MOI</h1>
+                  <h1>A PROPOS DU MAITRE DE CONFERENCE</h1>
                     <p>
                         <ul class="information">
-                            <li>Adresse postale : 94000 CRETEIL</li>
-                             <li>Adresse mail : valentine@gmail.com <img class="illustration" src="Images/gmail.png" alt="Gmail" height="20" width="20" /></li>
-                            <li>Numéro de téléphone : 0606060606</li>
-                            <li>Mon <a href="https://www.linkedin.com/in/valentine-lemonnier-38bb49203/">Linkedin</a><img class="illustration" src="Images/linkedin.png" alt="Linkedin" height="20" width="20" /></a>
+                            <li>PRÉNOM ET NOM : MAEL PEGNY</li>
+                            <li>POSTE : CHERCHEUR POSTDOCTORAL</li>
                         </ul>
                     </p>
                     <br>
                     <br>
                     <br>
                     <p>
-                        <ul class="skills">
-                            LANGUES
-                            <li>Français : Niveau C2</li>
-                            <li>Anglais : Niveau C1</li>
+                        <ul class="sommaires">
+                            SOMMAIRE
+                            <li>Introduction : les bases de l'intelligence artificielle</li>
+                            <li>Conférence : Maël Pegny</li>
                             <li>Espagnol : Niveau A2</li>
                             <li>Italien : Niveau A2</li>
                         </ul>
