--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -33,8 +33,6 @@
                             SOMMAIRE
                             <li>Introduction : les bases de l'intelligence artificielle</li>
                             <li>Conférence : Maël Pegny</li>
-                            <li>Espagnol : Niveau A2</li>
-                            <li>Italien : Niveau A2</li>
                         </ul>
                     </p>
                 </div>
@@ -44,16 +42,14 @@
 </div>
                 <div class="right-column">
                     <div class="header">
-                        <h1> Valentine LEMONNIER</h1>
-                        <h4><em>Étudiante en droit du numérique</em></h4>
+                        <h1>L'INTELLIGENCE ARTIFICIELLE</h1>
                     </div>   
-                            <div class="section">
-                                <h2>MES EXPERIENCES</h2>
-                                <hr class="hr">
+                            <div class="Introduction">
+                                <h2>Introduction : les bases de l'intelligence artificielle</h2>
                                 <ul>
                             <p>
-                                    <h3>Juriste alternante au sein du service juridique de <a href="https://www.docaposte.com">DOCAPOSTE</a></h3>
-                                    <p><em>Septembre 2021 à Aujourd'hui</em></p>
+                                    <h3>Une notion apparue dans les années 50</h3>
+                                    <p> Elle est directement liée à la montée en puissance des données , à l’évolution des technologies et à l’utilisation des données sur Internet. En effet, en une cinquantaine d’années on a eu une très grande évolution des données dans trois dimensions, appelées les 3V : vitesse, volume, variété. L’utilisation de l’intelligence artificielle est basée sur des algorithmes de ces données, afin de pouvoir proposer des solutions aux personnes souhaitant combiner ces données.</p>
                                         <ul>
                                             <li>Préparation et modification de contrats</li>
                                             <li>Mise en conformité des clauses RGPD</li>
